# decent-serde-json-derive-alternative

./: Cargo.toml
src/: lib.rs
test_usage/: Cargo.toml
test_usage/src/: main.rs
