[package]
name = "decent-serde-json-derive-alternative"
version = "0.2.0"
authors = ["Loïc Lecrenier <loic.lecrenier@me.com>"]
edition = "2018"
license = "MIT"
repository = "https://git.sr.ht/~loic/decent-serde-json-derive-alternative"
description = "A derive proc-macro for the FromJson and ToJson traits defined by the decent-serde-json-alternative crate. It compiles quickly but is not as robust or flexible as the serde_derive proc-macro. Sometimes it is enough."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"

[dependencies.decent-synquote-alternative]
version = "0.2"
# path = "../decent-synquote-alternative"
